add test velocity

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,10 @@
 [x] オブジェクトを追加
 [x] clearでオブジェクトをクリア
 [x] 初期化すると周りに壁だけがある
-[ ] 重力
-  [ ] チェックを入れると重力の有無が変化
+[x] 重力
+  [x] チェックを入れると重力の有無が変化
   [x] スタートを押すと物理演算スタート
   [x] ストップを押すと物理演算停止
-  [ ] リセットを押すと元の状態に戻る
+  [x] リセットを押すと元の状態に戻る
+[x] 速度
+  [x] スタートを押すと速度が変化する
